<resources>
    <string name="app_name">Java Developers</string>
    <string name="username">Chykehyman</string>
    <string name="company_text">Company:</string>
    <string name="company">Andela Nigeria</string>
    <string name="profile_image_description">developer profile image</string>
    <string name="arrow_image_description">view details image</string>
    <string name="github_url">github.com/chykehyman</string>
    <string name="username_text">Username</string>
    <string name="github_url_text">Github Link</string>
    <string name="details_name">Profile</string>
    <string name="share_details">Share Profile</string>
    <string name="share_intent_type">text/plain</string>
    <string name="share_part_message">Check out this developer @</string>
    <string name="no_connection">No internet connection</string>
    <string name="fetch_failed">Bad internet Connection</string>
    <string name="spinner_city_title">select city</string>
    <string name="spinner_limit_title">select limit</string>
    <string name="layout_header">Welcome To JavaDevelopers</string>
    <string name="find_button">Find developers</string>
    <string name="select_city">Select City:</string>
    <string name="select_limit">Select Limit:</string>
</resources>