<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:src="@drawable/no_profile"
        android:fitsSystemWindows="true"
        android:id="@+id/profile_image_header"
        android:scaleType="centerCrop"
        android:contentDescription="@string/profile_image_description"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_username"
        android:textAlignment="center"
        android:text="@string/username_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        tools:text="@string/username"
        android:textSize="38sp"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/github_url_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/github_url"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/github_url"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:autoLink="web"
        android:textColorLink="@color/colorPrimary"
    />
</LinearLayout>